[gd_scene load_steps=17 format=3 uid="uid://xibnk2kph5sy"]

[ext_resource type="Theme" uid="uid://b2eu4jujeud0y" path="res://resources/themes/wiki_theme.tres" id="1_ermmr"]
[ext_resource type="LabelSettings" uid="uid://bsjqw3m3umydi" path="res://resources/LabelSettings/big_textes.tres" id="1_lgk1o"]
[ext_resource type="Script" path="res://scenes/menus/wiki_screen/wiki_screen.gd" id="1_rmd21"]
[ext_resource type="Texture2D" uid="uid://bngb571kcpnn1" path="res://assets/sprites/cardsFullResolution/reverso.png" id="2_2ij6p"]
[ext_resource type="Texture2D" uid="uid://dhoqckgn1k7fa" path="res://assets/sprites/cardsFullResolution/grulla.png" id="3_3oy84"]
[ext_resource type="Texture2D" uid="uid://cegoluvhe0lar" path="res://assets/sprites/cardsFullResolution/grullaBlaca.png" id="4_yt0g6"]
[ext_resource type="Texture2D" uid="uid://cq400hc5yk0t2" path="res://assets/sprites/cardsFullResolution/mofeta.png" id="5_icmom"]
[ext_resource type="Texture2D" uid="uid://cnidyiytg70rf" path="res://assets/sprites/cardsFullResolution/pangolin.png" id="6_4dkke"]
[ext_resource type="Texture2D" uid="uid://cwae01qcbgsmm" path="res://assets/sprites/cardsFullResolution/pangolinBlanco.png" id="7_4i2of"]
[ext_resource type="Texture2D" uid="uid://cr0molg8b0pyp" path="res://assets/sprites/cardsFullResolution/rata.png" id="8_pqwgn"]
[ext_resource type="Texture2D" uid="uid://u1nqewt2tkmo" path="res://assets/sprites/cardsFullResolution/especial2.png" id="9_qmgvc"]
[ext_resource type="Texture2D" uid="uid://tej13qf6vn8h" path="res://assets/sprites/cardsFullResolution/especial1.png" id="10_73aqc"]
[ext_resource type="Texture2D" uid="uid://c63ruxqgmk0bp" path="res://assets/sprites/boss/buey.png" id="11_ao6y2"]
[ext_resource type="Texture2D" uid="uid://dcei2ml5rej1u" path="res://assets/sprites/cardsFullResolution/lince.png" id="11_ccrck"]
[ext_resource type="Texture2D" uid="uid://dtnu1ywt8h6i0" path="res://assets/backgrounds/backgroundEspinas.png" id="12_yml3x"]
[ext_resource type="Texture2D" uid="uid://xmcdtew2w6a" path="res://assets/sprites/boss/cobra.png" id="13_bxnnb"]
[ext_resource type="Texture2D" uid="uid://dqq5f6tuc02qo" path="res://assets/backgrounds/firstCinematic/bgComplete.png" id="13_dee20"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jk85g"]
bg_color = Color(0, 0, 0, 1)

[node name="WikiScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_ermmr")
script = ExtResource("1_rmd21")
cardImgList = Array[Texture]([ExtResource("2_2ij6p"), ExtResource("3_3oy84"), ExtResource("4_yt0g6"), ExtResource("5_icmom"), ExtResource("6_4dkke"), ExtResource("7_4i2of"), ExtResource("8_pqwgn"), ExtResource("9_qmgvc"), ExtResource("10_73aqc"), ExtResource("11_ccrck")])
bossImgList = Array[Texture]([ExtResource("11_ao6y2"), ExtResource("13_bxnnb")])
bgImgList = Array[Texture]([ExtResource("12_yml3x"), ExtResource("13_dee20")])

[node name="TextContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -140.5
offset_right = 140.5
offset_bottom = 175.0
grow_horizontal = 2
alignment = 1

[node name="Label" type="Label" parent="TextContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_jk85g")
text = "WIKI"
label_settings = ExtResource("1_lgk1o")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -493.0
offset_top = -115.0
offset_right = 493.0
offset_bottom = -42.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 50
alignment = 1

[node name="Cards" type="Button" parent="ButtonContainer"]
layout_mode = 2
theme_override_constants/h_separation = 10
theme_override_font_sizes/font_size = 24
text = "WIKI_CARDS_BUTTON"

[node name="Bosses" type="Button" parent="ButtonContainer"]
layout_mode = 2
theme_override_constants/h_separation = 10
theme_override_font_sizes/font_size = 24
text = "WIKI_BOSSES_BUTTON"

[node name="Backgrounds" type="Button" parent="ButtonContainer"]
layout_mode = 2
theme_override_constants/h_separation = 10
theme_override_font_sizes/font_size = 24
text = "WIKI_BACKGROUNDS_BUTTON"

[node name="CardsContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="BossesContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="BackgroundsContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="WikiHBox" type="Node" parent="."]

[node name="CardButton" type="Button" parent="WikiHBox"]
anchors_preset = -1
anchor_left = 0.248
anchor_top = 0.477
anchor_right = 0.274
anchor_bottom = 0.523
offset_left = -0.160034
offset_top = -0.160034
offset_right = -0.0800171
offset_bottom = 0.159973
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_ermmr")
theme_override_font_sizes/font_size = 64
text = "<"

[node name="CenterContainer" type="CenterContainer" parent="WikiHBox"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.2, 0.2)

[node name="Texture" type="TextureRect" parent="WikiHBox/CenterContainer"]
layout_mode = 2
expand_mode = 1
stretch_mode = 3

[node name="Button2" type="Button" parent="WikiHBox"]
anchors_preset = -1
anchor_left = 0.735
anchor_top = 0.477
anchor_right = 0.761
anchor_bottom = 0.523
offset_left = -17.2001
offset_top = 3.83997
offset_right = -17.1201
offset_bottom = 4.15997
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_ermmr")
theme_override_font_sizes/font_size = 64
text = ">"

[node name="CardsLabel" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.474
anchor_top = 0.198
anchor_right = 0.529
anchor_bottom = 0.249
offset_left = -0.0800781
offset_top = -469.84
offset_right = -0.680054
offset_bottom = -469.92
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 40
text = "cards"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BossesLabel" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.467
anchor_top = 0.198
anchor_right = 0.536
anchor_bottom = 0.249
offset_left = -0.140015
offset_top = -469.84
offset_right = -0.619995
offset_bottom = -469.92
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 40
text = "Bosses"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BGLabel" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.436
anchor_top = 0.198
anchor_right = 0.567
anchor_bottom = 0.249
offset_left = -0.120056
offset_top = -469.84
offset_right = -0.640015
offset_bottom = -469.92
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 40
text = "Backgrounds"
horizontal_alignment = 1
vertical_alignment = 1

[node name="WarningLabel" type="Label" parent="."]
visible = false
custom_minimum_size = Vector2(1000, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -500.0
offset_top = -11.5
offset_right = 500.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "SPOILER_ALERT_LABEL"
horizontal_alignment = 1
autowrap_mode = 3

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20

[node name="BackButton" type="Button" parent="MarginContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "BACK_BUTTON"

[connection signal="pressed" from="ButtonContainer/Cards" to="." method="_on_cards_pressed"]
[connection signal="pressed" from="ButtonContainer/Bosses" to="." method="_on_bosses_pressed"]
[connection signal="pressed" from="ButtonContainer/Backgrounds" to="." method="_on_backgrounds_pressed"]
[connection signal="pressed" from="WikiHBox/CardButton" to="." method="_on_left_arrow_pressed"]
[connection signal="pressed" from="WikiHBox/Button2" to="." method="_on_right_arrow_pressed"]
[connection signal="pressed" from="MarginContainer/BackButton" to="." method="_on_back_button_pressed"]
